[tool.poetry]
name = "pinnacle-road"
version = "0.1.0"
description = ""
authors = ["maxfire2008 <22722054+maxfire2008@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "pinnacle_road"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
homeassistant = "^2024.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
